@@ -39,6 +39,15 @@ docker {
     buildArgs(['JAR_FILE': "${jar.baseName}"])
 }
 
+test {
+    jvmArgs = ["-Xms256m", "-Xmx2048m", "--add-opens", "java.base/jdk.internal.loader=ALL-UNNAMED"]
+}
+
+
+bootRun {
+    jvmArgs = ["-Xms256m", "-Xmx2048m", "--add-opens", "java.base/jdk.internal.loader=ALL-UNNAMED"]
+}
+
 dockerRun {
     name "${project.group}/${project.name}"
     ports '8080:8080'
@@ -49,8 +58,8 @@ repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 11.0
+targetCompatibility = 11.0 
 
 ext{
     spring = '2.1.1.RELEASE'
@@ -80,6 +89,7 @@ dependencies {
     //compile 'org.springframework.social:spring-social-facebook:1.1.1.RELEASE'
 
     compile 'com.google.guava:guava:17.0'
+    compile group: 'org.javassist', name: 'javassist', version: '3.23.1-GA'
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-guava', version: '2.4.6' 
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.8' 
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'    
@@ -93,7 +103,7 @@ dependencies {
     testCompile('org.junit.jupiter:junit-jupiter-params:5.3.2')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.2')
     testCompile 'org.codehaus.groovy:groovy-all:2.4.1'
-    testCompile 'org.easymock:easymock:3.4'
+    testCompile 'org.easymock:easymock:4.0.2'
     compileOnly 'com.newrelic.agent.java:newrelic-agent:3.14.0'
 }
 
